--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Login</title>
+  <link href="https://fonts.googleapis.com/css?family=Cantarell|Muli|Nunito|Questrial|Yrsa:700" rel="stylesheet">
 </head>
-<body>
-  <div style="top: 0; position: fixed; width: 100%; background-color: #9dd9f9; margin-left: -10px;"><h1 style="margin-left: 10px;">AppliTrees</h1></div>
+<body style="font-family: Muli;">
+  <div style="top: 0; position: fixed; width: 100%; background-color: #9dd9f9; margin-left: -10px; height: 10%;"><h1 style="margin-left: 10px; margin-top: 1%;">AppCounts</h1></div>
   <div id="loginPlace"></div>
   <script type="text/javascript" src="./app.js"></script>
 </body>
